--- a/book.tex
+++ b/book.tex
@@ -61,7 +61,7 @@
 
 \begin{spacing}{3}
 {\huge Python for Informatics}\\
-{\Large Exploring Information}
+{\Large Exploring Information}\\
 \end{spacing}
 
 \vspace{0.25in}
@@ -102,7 +102,7 @@ Version \theversion
 
 {\Large
 Charles Severance\\
-Allen Downey\\
+Allen B. Downey\\
 }
 
 
@@ -216,32 +216,64 @@ an book titled
 a Computer Scientist}
 written by Allen B. Downey, Jeff Elkner and others.
 
-In the Fall of 2009, I had taught the course SI502 - Networked Computing
-for four straight semesters using Python and really felt the 
-need for a decidedly non-Computer Science text.  My goal in the course
-was to teach people life-long data handling skills using Python.  Few of my
+In Decmber of 2009, I was preparing to teach
+SI502 - Networked Programming at the University of Michigan
+for the fifth semester in a row and decided it was time
+to write a Python textbook that focused on exploring data
+rather than a first programming course for Computer Scientists.
+My goal in SI502 was to teach people life-long data handling 
+skills using Python.  Few of my
 students would ever be professional computer programmers - instead, they
 would be librarians, managers, lawyers, biologists, economists, etc.
 In short, they represented every field outside of Computer Science.
 
-I could not find the perfect book for my course.  There were many books 
-on how to get started on the career path of the Computer Scientist but no
-books for folks who just wanted to really master and understand how
-computers worked so they could use them in their lives - whatever their 
-chosen career or vocation.
+I never seemed to find the perfect book for my course so I set out 
+to write just such a book.  Luckily at a faculty meeting three weeks
+before I was about to start my new book from scratch, 
+Dr. Atul Prakash showed me the {\em Think Python} book which he had
+been using to teach his Python courses.
 
-That said, 
-{\em Think Python} 
-was an excellent starting point for 
-{\em Python for Informatics} 
-because is was well written, using language that someone just
-starting out could understand.
+{\em Think Python} did follow the structure of most introductory Computer
+Science textbooks.  It is a well-witten text with a focus on 
+simple explanations and ease of learning.  Jeff Elkner is a High
+School teacher and so the language in the book is understandable
+at a High School level.
 
-So we shall see where this remixing goes and see how well the book
-turns out.
+The book was available under the 
+GNU Free Documentation License 
+so I had all the permission I needed
+to use the book as the base material for my book.  As a courtesy, 
+I sent a note to Allen and Cambridge Press letting them know what I 
+was about to do to their book.
 
-Charles Severance
-December 17, 2009
+I expect that by the time I am done with {\em Python for Informatics} 
+over fifty percent of the book will be new.  The overall structure
+will be changed to get to doing data analysis problems as quickly as
+possible and have a series of running examples about data analysis.
+Then I will add sections on regular expressions, data
+vizualization, working with spreadsheet data, structured 
+query lauguage using SQLIte3, web scraping, and calling REST-based
+Application Program Interfaces using Twitter.
+
+What is intereresting is how much of the original {\em Think Python} book
+material is completely relevant to this book and how much will fit
+right into {\em Python for Informatics} with virtually no change.
+
+By starting with the {\em Think Python} book, I won't have to write the
+basic descriptions of the Python language or how to debug programs
+and instead focus on the topical material that is the value-add
+of {\em Python for Informatics}.
+
+I hope that this book serves an example of why open 
+materials are so important to the future of education,
+and want to publically thank Allen B. Downey and Cambridge University
+Press for their forward looking decision to make the book available
+under an open Copyright.   I hope they are pleased with the 
+results of my efforts and I hope that you the reader are pleased with
+{\em our} collective efforts.
+
+Charles Severance\\
+December 19, 2009
 
 Charles Severance is a 
 Clinical Assistant Professor 
@@ -330,12 +362,6 @@ I hope you enjoy working with this book, and that it helps
 you learn to program and think, at least a little bit, like
 a computer scientist.
 
-Allen B. Downey \\
-Needham MA\\
-
-Allen Downey is an Associate Professor of Computer Science at 
-the Franklin W. Olin College of Engineering.
-
 \subsection*{Acknowledgements for ``Think Python''}
 
 (Allen B. Downey)
@@ -364,6 +390,12 @@ below) who sent in corrections and suggestions.
 
 And I thank my wife, Lisa, for her work on this book, and Green
 Tea Press, and everything else, too.
+
+Allen B. Downey \\
+Needham MA\\
+
+Allen Downey is an Associate Professor of Computer Science at 
+the Franklin W. Olin College of Engineering.
 
 
 \clearemptydoublepage
@@ -430,7 +462,7 @@ to 16
 \afterverb
 %
 Our ``personal information analysis assistant'' quickly 
-told us that the word ``to'' was used ten times in the
+told us that the word ``to'' was used sixteen times in the
 first three paragraphs of this chapter.
 
 It is this very fact that computers are good at things 
