Add stubs for additional chapters and fix a few preface typos
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@65399 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -216,12 +216,11 @@ an book titled
 a Computer Scientist}
 written by Allen B. Downey, Jeff Elkner and others.
 
-In Decmber of 2009, I was preparing to teach
+In December of 2009, I was preparing to teach
 SI502 - Networked Programming at the University of Michigan
 for the fifth semester in a row and decided it was time
-to write a Python textbook that focused on exploring data
-rather than a first programming course for Computer Scientists.
-My goal in SI502 was to teach people life-long data handling 
+to write a Python textbook that focused on exploring data.
+My goal in SI502 is to teach people life-long data handling 
 skills using Python.  Few of my
 students would ever be professional computer programmers - instead, they
 would be librarians, managers, lawyers, biologists, economists, etc.
@@ -229,12 +228,13 @@ In short, they represented every field outside of Computer Science.
 
 I never seemed to find the perfect book for my course so I set out 
 to write just such a book.  Luckily at a faculty meeting three weeks
-before I was about to start my new book from scratch, 
+before I was about to start my new book from scratch over 
+the holiday break, 
 Dr. Atul Prakash showed me the {\em Think Python} book which he had
-been using to teach his Python courses.
+used to teach his Python course that semester.
 
 {\em Think Python} did follow the structure of most introductory Computer
-Science textbooks.  It is a well-witten text with a focus on 
+Science textbooks.  It is a well-written text with a focus on 
 simple explanations and ease of learning.  Jeff Elkner is a High
 School teacher and so the language in the book is understandable
 at a High School level.
@@ -251,11 +251,11 @@ over fifty percent of the book will be new.  The overall structure
 will be changed to get to doing data analysis problems as quickly as
 possible and have a series of running examples about data analysis.
 Then I will add sections on regular expressions, data
-vizualization, working with spreadsheet data, structured 
-query lauguage using SQLIte3, web scraping, and calling REST-based
+visualization, working with spreadsheet data, structured 
+query launguage using SQLIte3, web scraping, and calling REST-based
 Application Program Interfaces using Twitter.
 
-What is intereresting is how much of the original {\em Think Python} book
+What is interesting is how much of the original {\em Think Python} book
 material is completely relevant to this book and how much will fit
 right into {\em Python for Informatics} with virtually no change.
 
@@ -266,13 +266,14 @@ of {\em Python for Informatics}.
 
 I hope that this book serves an example of why open 
 materials are so important to the future of education,
-and want to publically thank Allen B. Downey and Cambridge University
+and want to thank Allen B. Downey and Cambridge University
 Press for their forward looking decision to make the book available
 under an open Copyright.   I hope they are pleased with the 
 results of my efforts and I hope that you the reader are pleased with
 {\em our} collective efforts.
 
 Charles Severance\\
+www.dr-chuck.com\\
 December 19, 2009
 
 Charles Severance is a 
@@ -11839,6 +11840,68 @@ $\log f$ and $\log r$.  Use the graphing program of your
 choice to plot the results and check whether they form
 a straight line.  Can you estimate the value of $s$?
 \end{ex}
+
+
+\chapter{Regular expressions}
+
+\section{More accurate searching}
+
+\section{Building regular expressions}
+
+\section{Applications of regular expressions}
+
+\section{Regular expressions at the command line (Advanced)}
+
+
+
+\chapter{Visualizing data}
+
+\section{Simple graphics in Python}
+
+\section{Python and spreadsheets}
+
+\section{Using Google visualization}
+
+
+
+\chapter{Networked programs}
+
+\section{The Internet}
+
+\section{Making network connections}
+
+\section{Retrieving web pages}
+
+\section{Parsing HTML and scraping the web}
+
+
+
+\chapter{Using web services}
+
+\section{Serivce Oriented Architeture (SOA)}
+
+\section{Application Programming Intercaces (API)}
+
+\section{eXtensible Markup Language (XML)}
+
+\section{Parsing XML}
+
+\section{Calling web services}
+
+
+\chapter{Using databases}
+
+\section{What is a database?}
+
+\section{Using the SQLite3 database}
+
+\section{The basics of Structured Query Language (SQL)}
+
+\section{Basic data modelling}
+
+\section{Using JOIN to retrieve data}
+
+\section{Python and SQLite3}
 
 
 \appendix
